2023_02_07: refactor code